--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,5 +18,15 @@ body{
     height: 100%;
     margin:auto;
     clear: both;
+}
 
+/* headings */
+h1, h2 {
+	font-family: oswald, sans-serif;
+	text-transform: uppercase;
+	font-weight: 500;
+	text-decoration: none;
+}
+h6, span {
+	text-align: center;
 }
