--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     border: none;
 }
 
-body{
+body {
     font-size: 16px;
     color: #ccc;
     font-family: 'lato', sans-serif;
@@ -30,3 +30,17 @@ h1, h2 {
 h6, span {
 	text-align: center;
 }
+
+/* header */
+.quiz-name {
+    text-align: center;
+    text-decoration: none;
+}
+
+/* main home page container */
+.home-page-box {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
