--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@ body {
     font-family: 'lato', sans-serif;
     font-weight: 400;
     background: url("../images/pic.jpg") no-repeat center;
+    background-size: cover;
     width: 100%;
     height: 100%;
     margin:auto;
@@ -35,6 +36,12 @@ h6, span {
 .quiz-name {
     text-align: center;
     text-decoration: none;
+}
+
+.quiz-name .logo {
+    align-content: center;
+    padding: 10px 0 10px;
+    
 }
 
 /* main home page container */
@@ -137,7 +144,7 @@ button.btn {
 .questions-box .question-text,
 .questions-box .option-wrapper,
 .questions-box .next-question-btn,
-.questions-box .answers-section {
+.questions-box .answers-area {
    width: 100%;
    float: left;
 }
