--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     color: #ccc;
     font-family: 'lato', sans-serif;
     font-weight: 400;
-    background: url("../images/pic.jpg") no-repeat center;
+    background: url("../images/pic.jpg") no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -373,4 +373,17 @@ button.btn {
 	margin-top: 10px;
     }
 }
-	
+/* media query medium screens */
+@media screen and (max-width: 960px) {
+
+    body {
+    	padding: 10px;
+	}
+	.form {
+		padding: 10px 10px 15px;
+	}
+	.questions-box {
+	padding: 10px;
+	margin: 4px 4px;
+	}
+}	
