--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,10 +307,10 @@ button.btn {
 	margin:30px 0;
 }
 .score-box table td{
-	border:1px solid #cccccc;
+	border:1px solid #ccc;
 	padding:8px 15px;
 	font-weight: 500;
-	color:#cccccc;
+	color:#ccc;
 	width: 50%;
 	text-align: left;
 	font-size: 18px;
