--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 body {
     font-size: 16px;
     color: #ccc;
+	display: flex;
     font-family: 'lato', sans-serif;
     font-weight: 400;
     background: url("../images/pic.jpg") no-repeat center center;
