--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,10 +11,9 @@
 body {
     font-size: 16px;
     color: #ccc;
-	display: flex;
-    font-family: 'lato', sans-serif;
+	font-family: 'lato', sans-serif;
     font-weight: 400;
-    background: url("../images/pic.jpg") no-repeat center center;
+    background: url("../images/pic.jpg") center center;
     background-size: cover;
     width: 100%;
     height: 100%;
