--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     color: #ccc;
 	font-family: 'lato', sans-serif;
     font-weight: 400;
-    background: url("../images/pic.jpg") no-repeat center center;
+    background: url("../images/pic.jpg") no-repeat center center fixed;
     background-size: cover;
     width: 100%;
     height: 100%;
