--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,8 @@ h6, span {
 
 /* main home page container */
 .home-page-box {
-	/*height: 100vh;
-	width: 100vw;*/
+	height: 100vh;
+	width: 100vw;
 	margin-top: 10px;
     display: flex;
 	justify-content: center;
