--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ h6, span {
 
 .instructions {
 	color: #fff;
-	font-weight: 400px;
+	font-weight: 400;
 	font-size: 20px;
 	margin-top: 10px;
 	text-align: left;
@@ -378,7 +378,6 @@ button.btn {
 
     body {
     	padding: 10px;
-		overflow: hidden;
 		height: 100%;
 	}
 	.form {
