--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 *{
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
     margin: 0;
     padding: 0;
     border: none;
@@ -45,8 +45,6 @@ h6, span {
 
 /* main home page container */
 .home-page-box {
-	height: 100vh;
-	width: 100vw;
 	margin-top: 10px;
     display: flex;
 	justify-content: center;
