--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,10 +15,11 @@ body {
     font-weight: 400;
     background: url("../images/pic.jpg") no-repeat center center;
     background-size: cover;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    height: 100vh; 
 	margin: auto;
     clear: both;
+	position: relative;
 }
 
 /* headings */
@@ -56,8 +57,8 @@ h6, span {
 /* form on front page */
 .myform {
     position: relative;
-    width: 100%;;
-    max-width: 700px;
+    width: 100vh; /*changed from 100%*/
+	max-width: 700px;
     padding: 20px 40px 40px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
@@ -302,8 +303,10 @@ button.btn {
 	clear: both;
 	margin: 0 auto;
 	margin-bottom: 5px;
-	background-color: transparent;
+	background-color: grey; /*this was transparent*/
 	height: 75px;
+	bottom: 0;
+	position: absolute fixed;
 }
 
 /*footer text and social media*/
