--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,10 @@ body {
     background: url("../images/pic.jpg") no-repeat center center;
     background-size: cover;
     /* width: 100%; */
-    height: 100vh; 
+    /* height: 100vh;  */
 	margin: auto;
     clear: both;
-	position: relative;
+	/* position: relative; */
 }
 
 /* headings */
@@ -307,7 +307,7 @@ button.btn {
 	background-color: grey; /*this was transparent*/
 	height: 75px;
 	bottom: 0;
-	position: absolute fixed;
+	/* position: absolute fixed; */
 }
 
 /*footer text and social media*/
