--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ button.btn {
 
 /* question box container */
 .questions-box{
-	margin-top: 20px;
+	margin-top: 20px 15px 40px;
 	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 10px;
 	box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.9);
