--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -363,7 +363,7 @@ button.btn {
 
     body {
     	padding: 10px;
-		height: 100%;
+		/* height: 100%; */
 	}
 	.myform {
 		padding: 10px 20px 15px;
