--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,10 @@ body {
     font-weight: 400;
     background: url("../images/pic.jpg") no-repeat center center;
     background-size: cover;
-    /* width: 100%; */
-    /* height: 100vh;  */
+    width: 100%;
+    height: 100%;
 	margin: auto;
     clear: both;
-	/* position: relative; */
 }
 
 /* headings */
@@ -49,17 +48,16 @@ h6, span {
 /* main home page container */
 .home-page-box {
 	margin-top: 10px;
-    /* display: flex; */
+    display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
 }
 
 /* form on front page */
 .myform {
     position: relative;
-    width: 100vh; /*changed from 100%*/
-	max-width: 700px;
+    width: 100%;;
+    max-width: 700px;
     padding: 20px 40px 40px;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 10px;
@@ -117,7 +115,7 @@ button.btn {
 
 /* question box container */
 .questions-box{
-	margin-top: 20px 15px 40px;
+	margin-top: 20px;
 	background-color: rgba(0, 0, 0, 0.5);
 	border-radius: 10px;
 	box-shadow: 10px 10px 12px rgba(0, 0, 0, 0.9);
@@ -304,10 +302,8 @@ button.btn {
 	clear: both;
 	margin: 0 auto;
 	margin-bottom: 5px;
-	background-color: grey; /*this was transparent*/
+	background-color: transparent;
 	height: 75px;
-	bottom: 0;
-	/* position: absolute fixed; */
 }
 
 /*footer text and social media*/
@@ -363,7 +359,7 @@ button.btn {
 
     body {
     	padding: 10px;
-		/* height: 100%; */
+		height: 100%;
 	}
 	.myform {
 		padding: 10px 20px 15px;
