change background image and media query fo for small phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,9 @@ button.btn {
 	}
 	body {
     	padding: 5px;
-		background-image: url("../images/pic.jpg");
+		background-image: none;
+		background: url("../images/pic.jpg") no-repeat center center;
+		background-size: cover;
 	}
 	.myform {
 		padding: 5px 0 5px;
